--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-</head>
-<body>
-<section class="hero is-info">
-      <div class="hero-head">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start pl-2">
-              <a href="/" class="navbar-item">Home</a>
-            </div>
-            <div class="navbar-end pr-2">
-              <div class="navbar-item">
-                <div class="buttons">
-                  {% if user.is_authenticated %}
-                  <a class="button is-primary" href="/logout/">Logout</a>
-                  {% else %}
-                  <a class="button is-primary" href="/login/auth0">Login</a>
-                  {% endif %}
-                </div>
-              </div>
-            </div>
-          </div>
-        </nav>
-        <div class="hero-body">
-          <div class="container has-text-centered">
-            <p class="title">{% block main_title %}{% endblock %}</p>
-            <p class="subtitle">{% block sub_title %}{% endblock %}</p>
-          </div>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Schedule Optimizer</a>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav me-auto">
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+            {% if user.is_authenticated %}
+            <a target="_blank" rel="noopener" class="nav-link" href="/logout/">Logout</a>
+            {% else %}
+            <a target="_blank" rel="noopener" class="nav-link" href="/login/auth0">Login</a>
+            {% endif %}
+            </li>
+          </ul>
         </div>
       </div>
-    </section>
-    <section class="section">
-      <div class="container">
-        {% block content %}{% endblock %}
-      </div>
-    </section>
-</body>
+    </nav>
+  </body>
 </html>
